Adiciona ícone de nova janela nos posts do tableless

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,7 +7,7 @@
   blocked_comments: O envio de comentários está bloqueado para este post.
 
   # metas
-  meta_title: PHP, jQuery, Javascript, Python, Django, Ruby, Rails - Blog do programador Davi Ferreira
+  meta_title:  Blog do programador Davi Ferreira - jQuery, Javascript, Python, Django, Ruby, Rails, PHP
   meta_description: Blog sobre PHP, Design, Interfaces, MySQL, jQuery, Javascript, HTML/CSS, Rails, Ruby, Python e Django. Mantido pelo programador Davi Ferreira.
 
   # formatos de data e hora
